removed web client, added readme

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -2,29 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WsChat</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web-socket-js/1.0.0/web_socket.js"></script>
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="client.js" type='text/javascript'></script>
+    <title>Demo</title>
 </head>
 <body>
-<div class="navbar  navbar-inverse">
-    <div id="room" class="container">
-        <div class="navbar-header">
-            <h1> Chat room</h1>
-        </div>
-    </div>
-</div>
-
-<div id="chat" class="container">
-    <div id="messages"></div>
-    <form id="send-form">
-        <input id="send-message" class="form-control" type="text"/>
-        <button id="send-button" class="btn btn-primary">Send</button>
-
-    </form>
-</div>
 </body>
 </html>
